--- a/src/app/core/layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layout/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
-<nav class="w-full h-[70px] border-b-1 border-[#cccccc] flex items-center px-4 md:px-8">
+<nav class="w-full h-[70px] border-b-1 border-[#cccccc] flex items-center px-3 md:px-6">
   <!-- Logo -->
   <div class="flex items-center min-w-[50px]">
     <div class="logo"><img class="h-10 w-10" src="images/Logo.png" alt="ego logo"/></div>
   </div>
   <!-- Buttons desktop -->
-  <div class="hidden sm:flex w-full ml-[150px] justify-between h-full">
+  <div class="hidden sm:flex w-full ml-5 md:ml-10 lg:ml-30 justify-between h-full">
     <div class="flex items-center gap-4 ">
         @if(buttons()){
             @for(button of buttons(); track button){
