--- a/src/app/core/layout/car-card/car-card.component.html
+++ b/src/app/core/layout/car-card/car-card.component.html
@@ -2,7 +2,7 @@
     <span class="font-bold text-2xl self-center text-center">
         {{ title() }}
     </span>    
-    <div class="flex flex-row text-sm justify-center">
+    <div class="flex flex-row text-[14px] justify-center">
         <span class="self-center">{{ year() }} | {{ price() }}</span>        
     </div>
         <picture class="content-center m-auto hover:scale-110 duration-300 ease-in">
