--- a/src/app/shared/components/nav-button/nav-button.component.html
+++ b/src/app/shared/components/nav-button/nav-button.component.html
@@ -1,3 +1,7 @@
-<button class="h-full transition px-10 border-b-3 font-bold border-transparent hover:border-[#D0021B] hover:text-[#D0021B]">
+<button class="h-full transition px-10 border-b-3 border-transparent font-bold hover:border-[#D0021B] hover:text-[#D0021B]"
+  (click)="setTabIndex()"
+  [routerLink]="path()"
+  [ngClass]="index() == tabSelected() ? 'active' : ''"
+>
 {{title()}}
 </button>    
