--- a/src/app/core/layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layout/nav-bar/nav-bar.component.html
@@ -15,53 +15,29 @@
       <!-- Menu desktop -->
     <div class="flex flex-row ">
         <button class="font-bold flex items-center cursor-pointer z-1001"   
-                (click)="toggleMenu($event)"
+                (click)="toggleMenu()"
                 [matMenuTriggerFor]="menu">
               <span class="text-[14px] self-center">{{isMenuOpen() ? "Cerrar" : "Menu"}}</span>
               <mat-icon [fontIcon]="isMenuOpen() ? 'close' : 'menu'"></mat-icon>
             </button>             
-            <mat-menu #menu="matMenu" class="custom-menu" yPosition="below">
+            <mat-menu #menu="matMenu" class="custom-menu">
             <app-menu></app-menu>         
           </mat-menu>
     </div>   
   </div>
   <div class="sm:hidden flex w-full justify-end">
      <!-- Burger button (mobile) -->
-    <button class="text-[14px] font-bold flex items-center cursor-pointer" [matMenuTriggerFor]="menu">
-            Ordenar por<mat-icon fontIcon="arrow_drop_down"></mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-             <app-menu></app-menu>         
-    </mat-menu>
-    
-     <!-- <button
-      class="ml-4 flex items-center justify-center w-10 h-10 rounded-lg hover:bg-gray-100 transition"
-    >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6 text-gray-800"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button> -->
+          <button class="font-bold flex items-center cursor-pointer z-1001"   
+                (click)="toggleMenu()"
+                [matMenuTriggerFor]="menu">
+              <span class="text-[14px] self-center"></span>
+              <mat-icon fontIcon="menu"></mat-icon>
+          </button>             
+          <mat-menu #menu="matMenu" class="custom-menu">
+             <!-- @if(!isMenuOpen()){ -->
+               
+           <!-- } -->
+            <app-menu (toggleMenu)="toggleMenu()"></app-menu>         
+          </mat-menu>    
 </div>
 </nav>
-
-<!-- Mobile menu -->
- @if(isMenuOpen()){
-     <div  
-       class="md:hidden w-full bg-white border-b shadow-sm px-4 py-4 flex flex-col gap-3"
-     >
-       <button class="px-4 py-2 rounded-lg bg-blue-600 text-white">
-         Botón 1
-       </button>
-     
-       <button class="px-4 py-2 rounded-lg bg-gray-200 text-gray-800">
-         Botón 2
-       </button>
-     </div>
- }
