cars(slide): Fixed some issues with slide, fixed responsive filter nav

--- a/src/app/core/layout/menu/menu.component.html
+++ b/src/app/core/layout/menu/menu.component.html
@@ -11,7 +11,7 @@
         <hr class="border-transparent my-5">
         }@else {
           <li>
-            <button (click)="setTabIndex(item.index)" class="border-b border-transparent hover:border-black">{{item.title}}</button>
+            <button class="border-b border-transparent hover:border-black">{{item.title}}</button>
           </li>
         }
       }
