--- a/src/app/core/layout/slide/slide-card/slide-card.component.html
+++ b/src/app/core/layout/slide/slide-card/slide-card.component.html
@@ -1,4 +1,4 @@
-<section class="grid grid-row-3 gap-4">
+<section class="grid grid-row-3 gap-4 w-full justify-items-center mx-[10px]">
     <img class="max-w-[268px]" [src]="image()"/>
     <span class="text-[20px] font-semibold text-[#373737]">{{title()}}</span>
     <div [innerHtml]="description()"></div>
