--- a/src/app/core/layout/slide/slide.component.html
+++ b/src/app/core/layout/slide/slide.component.html
@@ -1,14 +1,17 @@
 @if(slideCarDetail(); as car){
-    <swiper-container class="swiper" slides-per-view="4" initial-slide="1" centered-slides="true" space-between="10" pagination="false"
+    <swiper-container #swiper class="swiper"
+                     [breakpoints]="breakPoints"
+                     [initialSlide]="3"
+                     centered-slides="true" space-between="10" pagination="false"
         pagination-type="fraction" navigation="true">
         @for(des of car.model_features; track des){
-            <swiper-slide>
+            <swiper-slide class="w-full">
                 <app-slide-card [title]="des.name" [description]="des.description" [image]="des.image"></app-slide-card>
             </swiper-slide>
     
         }
         @for(des of car.model_highlights; track des){
-            <swiper-slide>
+            <swiper-slide class="w-full">
                 <app-slide-card [title]="des.title" [description]="des.content" [image]="des.image"></app-slide-card>
             </swiper-slide>
         }      
