--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,7 @@ body {
 .mat-mdc-menu-content {
     font-family: "Montserrat", sans-serif!important;
 }
+
+.button {
+    font-family: "Montserrat", sans-serif!important;
+}
