--- a/src/app/core/layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layout/nav-bar/nav-bar.component.html
@@ -1,43 +1,56 @@
-<nav class="w-full h-[70px] border-b-1 border-[#cccccc] flex items-center px-3 md:px-6">
+<nav
+  class="w-full h-[70px] border-b-1 border-[#cccccc] flex items-center px-3 md:px-6"
+>
   <!-- Logo -->
   <div class="flex items-center min-w-[50px]">
-    <div class="logo"><img class="h-10 w-10" src="images/Logo.png" alt="ego logo"/></div>
+    <div class="logo">
+      <img class="h-10 w-10" src="images/Logo.png" alt="ego logo" />
+    </div>
   </div>
   <!-- Buttons desktop -->
-  <div class="hidden sm:flex w-full ml-5 md:ml-10 lg:ml-30 justify-between h-full">
+  <div
+    class="hidden sm:flex w-full ml-5 md:ml-10 lg:ml-30 justify-between h-full"
+  >
     <div class="flex items-center">
-        @if(buttons()){
-            @for(button of buttons(); track button){
-                <app-button [title]="button.title" [index]="button.index"></app-button>
-            }
+      @if (buttons()) {
+        @for (button of buttons(); track button) {
+          <app-button
+            [title]="button.title"
+            [index]="button.index"
+          ></app-button>
         }
+      }
     </div>
-      <!-- Menu desktop -->
-    <div class="flex flex-row ">
-        <button class="font-bold flex items-center cursor-pointer z-1001"   
-                (click)="toggleMenu()"
-                [matMenuTriggerFor]="menu">
-              <span class="text-[14px] self-center">{{isMenuOpen() ? "Cerrar" : "Menu"}}</span>
-              <mat-icon [fontIcon]="isMenuOpen() ? 'close' : 'menu'"></mat-icon>
-            </button>             
-            <mat-menu #menu="matMenu" class="custom-menu">
-            <app-menu></app-menu>         
-          </mat-menu>
-    </div>   
+    <!-- Menu desktop -->
+    <div class="flex flex-row">
+      <!-- Burger button -->
+      <button
+        class="font-bold flex items-center cursor-pointer z-1001"
+        (click)="toggleMenu()"
+        [matMenuTriggerFor]="menu"
+      >
+        <span class="text-[14px] self-center">{{
+          isMenuOpen() ? "Cerrar" : "Menu"
+        }}</span>
+        <mat-icon [fontIcon]="isMenuOpen() ? 'close' : 'menu'"></mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" class="custom-menu">
+        <app-menu></app-menu>
+      </mat-menu>
+    </div>
   </div>
   <div class="sm:hidden flex w-full justify-end">
-     <!-- Burger button (mobile) -->
-          <button class="font-bold flex items-center cursor-pointer z-1001"   
-                (click)="toggleMenu()"
-                [matMenuTriggerFor]="menu">
-              <span class="text-[14px] self-center"></span>
-              <mat-icon fontIcon="menu"></mat-icon>
-          </button>             
-          <mat-menu #menu="matMenu" class="custom-menu">
-             <!-- @if(!isMenuOpen()){ -->
-               
-           <!-- } -->
-            <app-menu (toggleMenu)="toggleMenu()"></app-menu>         
-          </mat-menu>    
-</div>
+    <!-- Burger button (mobile) -->
+    <button
+      class="font-bold flex items-center cursor-pointer z-1001"
+      (click)="toggleMenu()"
+      [matMenuTriggerFor]="menu"
+    >
+      <span class="text-[14px] self-center"></span>
+      <mat-icon fontIcon="menu"></mat-icon>
+    </button>
+    <mat-menu #menu="matMenu" class="custom-menu">
+      <app-menu (toggleMenu)="toggleMenu()"></app-menu>
+    </mat-menu>
+  </div>
 </nav>
