--- a/src/app/core/layout/slide/slide.component.css
+++ b/src/app/core/layout/slide/slide.component.css
@@ -1,16 +1,23 @@
-swiper-container::part(button-next){
-    top: 0px!important;
-    height: 100%;
-    background: linear-gradient(90deg,rgba(255, 255, 255, 0.21) 0%, rgba(255, 255, 255, 0.46) 100%)!important;
+swiper-container::part(button-next) {
+  top: 0px !important;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.21) 0%,
+    rgba(255, 255, 255, 0.46) 100%
+  ) !important;
 }
 
 swiper-container::part(button-prev) {
-    background: linear-gradient(90deg,rgba(255, 255, 255, 0.46) 0%, rgba(255, 255, 255, 0.21) 100%)!important;
-    top: 0px!important;
-    height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.46) 0%,
+    rgba(255, 255, 255, 0.21) 100%
+  ) !important;
+  top: 0px !important;
+  height: 100%;
 }
 
 #swiper-icon {
-    height: 20px!important;
+  height: 20px !important;
 }
-
