--- a/src/app/core/layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layout/nav-bar/nav-bar.component.html
@@ -17,6 +17,7 @@
           <app-button
             [title]="button.title"
             [index]="button.index"
+            [isDisabled]="button.isDisabled"
           ></app-button>
         }
       }
