--- a/src/app/shared/components/nav-button/nav-button.component.html
+++ b/src/app/shared/components/nav-button/nav-button.component.html
@@ -3,6 +3,7 @@
   (click)="setTabIndex()"
   [routerLink]="path()"
   [ngClass]="index() == tabSelected() ? 'active' : ''"
+  [disabled]="isDisabled()"
 >
   {{ title() }}
 </button>
